nem tudok irni ge

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="col md-4 mt-3">
         
         <h3><b>Házi tyúkhúsleves</b> <br> <div class="price"><b>1 790 Ft</b></div> <br> 
-        <span>zöldég, tyúkhús, cérnametélt</span></h3>
+        <span>zöldség, tyúkhús, cérnametélt</span></h3>
    
       <hr>
     </div>
