galéria responzivitása intézve

--- a/galeria.html
+++ b/galeria.html
@@ -24,14 +24,14 @@
             <p class="text-center">Tekintsd meg galériánkat!</p>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center mt-3"><img src="kepek/galeriakep1.jpg" width="400px"  alt=""></div>
-                <div class="col-lg-4 col-md-6 text-center mt-3"><img src="kepek/galeriakep2.jpg" width="400px"  alt=""></div>
-                <div class="col-lg-4 col-md-6 text-center mt-3"><img src="kepek/galeriakep3.jpg" width="400px"  alt=""></div>
+                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep1.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
+                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep2.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
+                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep3.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center mt-3"><img src="kepek/galeriakep4.jpg" width="400px"  alt=""></div>
-                <div class="col-lg-4 col-md-6 text-center mt-3"><img src="kepek/galeriakep5.jpg" width="400px"  alt=""></div>
-                <div class="col-lg-4 col-md-6 text-center mt-3"><img src="kepek/galeriakep6.jpg" width="400px"  alt=""></div>
+                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep4.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
+                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep5.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
+                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep6.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
             </div>
         </div>
     </section>
