--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
+ 
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pizzaza</title>
   <link rel="shortcut icon" href="kepek/logo3.png" type="image/x-icon">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400&display=swap" rel="stylesheet">
@@ -36,30 +36,32 @@
                 <a class="nav-link active" aria-current="page" href="#">Étlap</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Itallap</a>
+                <a class="nav-link active" aria-current="page" href="itallap.html">Itallap</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Asztalfoglalás</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Galéria</a>
+                <a class="nav-link active" aria-current="page" href="galeria.html">Galéria</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Kapcsolat</a>
-              </li>
+              </li> -->
               <a class="logo" href="#"><img src="kepek/logo3.png" alt="logo3" width="70px"></a>
 
             </ul>
             <div>
-              <a class="d-flex p-2" href=""><img class="social float-end" src="kepek/facbuk.png" alt="facbuk"></a>
+              <a class="d-flex p-2" href="https://www.facebook.com/DobosPub/"><img class="social float-end" src="kepek/facbuk.png" alt="facbuk"></a>
             </div>
             <div>
-              <a class="d-flex" href=""><img class="social float-end" src="kepek/insta-logo.png" alt="csinsta"></a>
+              <a class="d-flex p-2" href="https://www.instagram.com/dobospub/"><img class="social float-end" src="kepek/insta-logo.png" alt="csinsta"></a>
             </div>
           </div>
+        </nav>
   </header>
 
-  <img class="csik " src="kepek/head.jpg" alt="fej">
+  <!-- <img class="csik " src="kepek/head.jpg" alt="fej"> -->
+  <div class="header-image"></div>
   <div class="container ">
     <div class="mt-5 text-center">
       <h1>Megszokott ízek</h1>
@@ -74,7 +76,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col md-4 mt-3">
+      <div class="col-xs-12 col-md-6 mt-3">
 
         <h3><b>Házi tyúkhúsleves</b> <br>
           <div class="price"><b>1 790 Ft</b></div> <br>
@@ -84,7 +86,7 @@
         <hr>
       </div>
 
-      <div class="col md-4 mt-3">
+      <div class="col-xs-12 col-md-6  mt-3">
         <h3><b>Jókai Bableves</b> <br>
           <div class="price"><b>1 990 Ft</b></div> <br>
           <span>kemencés pita, tejföl</span>
@@ -92,6 +94,42 @@
 
         <hr>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-6 mt-3">
+
+        <h3><b>Fokhagymakrémleves</b> <br>
+          <div class="price"><b>1 890 Ft
+          </b></div> <br>
+          <span>pizzafedő</span>
+        </h3>
+
+        <hr>
+      </div>
+
+      <div class="col-xs-12 col-md-6  mt-3">
+        <h3><b>Hideg fehércsoki krémleves</b> <br>
+          <div class="price"><b>1 890 Ft
+          </b></div> <br>
+          <span>karibi meggy</span>
+        </h3>
+
+        <hr>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-md-6 mt-3">
+
+        <h3><b>Mexikói cheddar sajtkrémleves</b> <br>
+          <div class="price"><b>1 990 Ft
+
+          </b></div> <br>
+          <span>jalapeno, salsa, paradicsom, tortilla</span>
+        </h3>
+
+        <hr>
+      </div>
+
     </div>
   </div>
 
