--- a/itallap.html
+++ b/itallap.html
@@ -11,13 +11,16 @@
     
   </head>
   <body>
+    <div class="header-image" style="background-image:url(kepek/csik.jpg);">
+
+    </div>
     <div class="container">
         <div class="mt-5 text-center">
             <h1>Itallap</h1>
             <h3>Itallapunk megtekintéséhez Itallapunk megtekintéséhez<br>válassz az alábbi kategóriák közül!</h3>
         </div>
         <div class="row">
-          <div class="mt-4 text-center"><a class="anim" href="#">Lime koktélok </a> I <a class="anim" href="#">Vodkák</a>
+          <div class="mt-4 text-center"><a class="anim" href="#">Lime koktélok </a> I <a class="anim" href="vodka.html">Vodkák</a>
           </div>
           
         </div>
