--- a/galeria.html
+++ b/galeria.html
@@ -1,41 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Galéria</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
-  <body>
 
-    <section>
-        <div class="container text-center">
-            <h1>Rendeld házhoz, vagy gyere el!</h1>
-            <h3>Az alábbi telefonszámon leadhatod kérelmedet:</h3>
-            <h1 class="fw-bold">+36/99 696 6555</h1>
-            <p class="mb-5">Nem kéne lemaradnod ezekről a dzsukelós ízekről. Rendeld hazádba még ma, de akár be is térhetsz!</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Galéria</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+
+<body>
+
+  
+  <section>
+    <div class="container text-center">
+      <h1>Rendeld házhoz, vagy gyere el!</h1>
+      <h4>Az alábbi telefonszámon leadhatod kérelmedet:</h4>
+      <h1 class="fw-bold">+36/99 696 6555</h1>
+      <p class="mb-5">Nem kéne lemaradnod ezekről a dzsukelós ízekről. Rendeld hazádba még ma,<br> de akár be is térhetsz!
+      </p>
+    </div>
+  </section>
+
+  <section>
+    <div class="container-fluid">
+      <h1 class="text-center">Galéria</h1>
+      <p class="text-center">Tekintsd meg galériánkat!</p>
+
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep1.jpg" width="300px"
+            class="img-fluid" alt="">
         </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <h1 class="text-center">Galéria</h1>
-            <p class="text-center">Tekintsd meg galériánkat!</p>
-
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep1.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
-                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep2.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
-                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep3.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep4.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
-                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep5.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
-                <div class="col-lg-4 col-md-4 text-center mt-3"><img src="kepek/galeriakep6.jpg" width="400px" class="img-thumbnail rounded"  alt=""></div>
-            </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep2.jpg" width="300px"
+            class="img-fluid" alt="">
         </div>
-    </section>
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep3.jpg" width="300px"
+            class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep4.jpg" width="300px"
+            class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep5.jpg" width="300px"
+            class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep6.jpg" width="300px"
+            class="img-fluid" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep7.jpg" width="300px"
+            class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep8.jpg" width="300px"
+            class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep9.jpg" width="300px"
+            class="img-fluid" alt=""></div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep10.jpg" width="300px"
+            class="img-fluid" alt=""></div>
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep11.jpg" width="300px"
+            class="img-fluid" alt=""></div>
+      </div>
+    </div>
+  </section>
+  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
