--- a/vodka.html
+++ b/vodka.html
@@ -11,6 +11,9 @@
     
   </head>
   <body>
+    <div class="header-image" style="background-image:url(kepek/csik.jpg);">
+
+    </div>
     <div class="container">
         <div class="mt-5 text-center">
             <h1>Itallap</h1>
