--- a/galeria.html
+++ b/galeria.html
@@ -9,7 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
 <body>
 
   
@@ -22,48 +21,48 @@
       </p>
     </div>
   </section>
-
+<!--Kepek-->
   <section>
     <div class="container-fluid">
-      <h1 class="text-center">Galéria</h1>
+      <h1 class="text-center" id="galeria">Galéria</h1>
       <p class="text-center">Tekintsd meg galériánkat!</p>
 
       <div class="row">
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep1.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep1.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep2.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep2.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep3.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep3.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep4.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep4.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep5.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep5.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep6.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep6.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep7.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep7.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep8.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep8.jpg" width="300px"
             class="img-fluid" alt="">
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep9.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep9.jpg" width="300px"
             class="img-fluid" alt=""></div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep10.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep10.jpg" width="300px"
             class="img-fluid" alt=""></div>
-        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-1"><img src="kepek/galeriakep11.jpg" width="300px"
+        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep11.jpg" width="300px"
             class="img-fluid" alt=""></div>
       </div>
-    </div>
-  </section>
+    <!--footer-->
+    <h5 class="text-center m-3">Minden jog fenntartva! © Pizzaza</h5>
+<div class="text-center fs-5"><a style="color: red;" href="#etlap">Étlap</a> | <a style="color: red;" href="#itallap">Itallap</a> | <a style="color: red;" href="#galeria">Galéria</a></div>
+  </div>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
