--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
     </div>
     <div class="row text-center pb-3">
       <div class="col md-6">
-        <button class="anim" href=""  onclick="valt('1')">Levesek </button> I
-        <button class="anim" href=""  onclick="valt('2')"> Tészták</button>
-        <button class="anim" href=""  onclick="valt('1')">Levesek </button> I
-        <button class="anim" href=""  onclick="valt('2')"> Tészták</button>
-        <button class="anim" href=""  onclick="valt('1')">Levesek </button> I
-        <button class="anim" href=""  onclick="valt('2')"> Tészták</button>
+        <button class="anim" href=""  onclick="valt('0')">Levesek </button> I
+        <button class="anim" href=""  onclick="valt('1')"> Tészták</button>
+        <button class="anim" href=""  onclick="valt('2')">Levesek </button> I
+        <button class="anim" href=""  onclick="valt('3')"> Tészták</button>
+        <button class="anim" href=""  onclick="valt('4')">Levesek </button> I
+        <button class="anim" href=""  onclick="valt('5')"> Tészták</button>
 
 
 
       </div>
     </div>
-    <div class="left container" id="1" style="left: 15% ;">
+    <div class="position-relative">
+    <div class="left container beniDad">
       <div class="row">
         <div class="col-xs-12 col-md-6 mt-3">
           <h3><b>Házi tyúkhúsleves</b> <br>
@@ -133,7 +134,7 @@
       </div>
     </div>
 
-    <div class="left container" id="2">
+    <div class="left container beniDad" id="2" >
   
 
       <div class="row">
@@ -183,6 +184,112 @@
     </div>
   </div>
 
+  
+  
+      <div class="left container" id="2">
+    
+  
+        <div class="row">
+          <div class="col-xs-12 col-md-6 mt-3">
+            <h3><b>Gnocchi padrone</b> <br>
+              <div class="price"><b>3 690 Ft</b></div> <br>
+              <span>tejszínes-póréhagymás csirkemell, házi gnocchi, mozzarella</span>
+            </h3>
+            <hr>
+          </div>
+          <div class="col-xs-12 col-md-6  mt-3">
+            <h3><b>Pappardelle</b> <br>
+              <div class="price"><b>3 990 Ft</b></div> <br>
+              <span>tejszínes lazac csíkok, kapribogyó, pangrattato</span>
+            </h3>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-6 mt-3">
+            <h3><b>Házi gnocchi</b> <br>
+              <div class="price"><b>3 890 Ft
+                </b></div> <br>
+              <span>gorgonzolás sajtmártás, sertésszűz csíkok</span>
+            </h3>
+            <hr>
+          </div>
+          <div class="col-xs-12 col-md-6  mt-3">
+            <h3><b>Pappardelle</b> <br>
+              <div class="price"><b>3 890 Ft
+                </b></div> <br>
+              <span>bélszíncsíkok, cukkini, aszalt paradicsom, mustár, tejszín</span>
+            </h3>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-6 mt-3">
+            <h3><b>Spagetti</b> <br>
+              <div class="price"><b>3 990 Ft
+                </b></div> <br>
+              <span>garnéla, fokhagyma, cukkini, koktélparadicsom, grana padano</span>
+            </h3>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+    <section class="lent">
+      <div class="container text-center">
+        <h1>Rendeld házhoz, vagy gyere el!</h1>
+        <h4>Az alábbi telefonszámon leadhatod kérelmedet:</h4>
+        <h1 class="fw-bold">+36/99 696 6555</h1>
+        <p class="mb-5">Nem kéne lemaradnod ezekről a dzsukelós ízekről. Rendeld hazádba még ma,<br> de akár be is térhetsz!
+        </p>
+      </div>
+    </section>
+  <!--Kepek-->
+    <section>
+      <div class="container-fluid">
+        <h1 class="text-center" id="galeria">Galéria</h1>
+        <p class="text-center">Tekintsd meg galériánkat!</p>
+  
+        <div class="row">
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep1.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep2.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep3.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep4.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep5.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep6.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep7.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep8.jpg" width="300px"
+              class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep9.jpg" width="300px"
+              class="img-fluid" alt=""></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep10.jpg" width="300px"
+              class="img-fluid" alt=""></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-4"><img src="kepek/galeriakep11.jpg" width="300px"
+              class="img-fluid" alt=""></div>
+        </div>
+      <!--footer-->
+  
+      <h5 class="text-center m-3">Minden jog fenntartva! © Pizzaza</h5>
+  <div class="text-center fs-5"><a style="color: red;" href="#etlap">Étlap</a> | <a style="color: red;" href="#itallap">Itallap</a> | <a style="color: red;" href="#galeria">Galéria</a></div>
+    </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
