--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <hr>
         </div>
         <div class="col-xs-12 col-md-6  mt-3">
-          <h3><b>Hideg fehércsoki krémleves</b> <br>
+          <h3><b> Fehércsoki krémleves</b> <br>
             <div class="price"><b>1 890 Ft
               </b></div> <br>
             <span>karibi meggy</span>
@@ -124,10 +124,10 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-6 mt-3">
-          <h3><b>Mexikói cheddar sajtkrémleves</b> <br>
+          <h3><b>Mexikói  sajtkrémleves</b> <br>
             <div class="price"><b>1 990 Ft
               </b></div> <br>
-            <span>jalapeno, salsa, paradicsom, tortilla</span>
+            <span>jalapeno, salsa, tortilla</span>
           </h3>
           <hr>
         </div>
@@ -288,8 +288,11 @@
       <!--footer-->
   
       <h5 class="text-center m-3">Minden jog fenntartva! © Pizzaza</h5>
-  <div class="text-center fs-5"><a style="color: red;" href="#etlap">Étlap</a> | <a style="color: red;" href="#itallap">Itallap</a> | <a style="color: red;" href="#galeria">Galéria</a></div>
+
+  <div class="text-center fs-5"><a  class="footer" >Étlap</a> | <a class="footer"  href="#itallap">Itallap</a> | <a class="footer"  href="#galeria">Galéria</a></div>
     </div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
