--- a/kezdolap.html
+++ b/kezdolap.html
@@ -34,9 +34,11 @@
                 </header>
                 <div class="content">
                     <div class="logo"><img src="assets/img/landing/dobos-box-logo-01.svg"></div>
-                    <div class="title">Dobos<br>Házhoz</div>
-                    <div class="question">Ha az alábbi helyeken laksz, hívd a kék telefonszámok egyikét!</div>
-                    <div class="cities">A kiszállítás díja az alábbi helyekre +200 Ft.<br><br> Révfalu, Győr-Sziget, Belváros,             Győrújfalu, Győrzámoly, Győrladamér, Sárás, Bácsa, Kisbácsa, Pinnyéd, és a többi városrészre is.<br><br>A             kiszállítás díja az alábbi helyekre +300 Ft.<br><br>Dunaszeg, Dunaszentpál, Vámosszabadi</div>
+                    <div class="szoveg">
+                        <div class="title">Dobos<br>Házhoz</div>
+                        <div class="question">Ha az alábbi helyeken laksz, hívd a kék telefonszámok egyikét!</div>
+                        <div class="cities">A kiszállítás díja az alábbi helyekre +200 Ft.<br><br> Révfalu, Győr-Sziget, Belváros,             Győrújfalu, Győrzámoly, Győrladamér, Sárás, Bácsa, Kisbácsa, Pinnyéd, és a többi városrészre is.<br><br>A             kiszállítás díja az alábbi helyekre +300 Ft.<br><br>Dunaszeg, Dunaszentpál, Vámosszabadi</div>
+                        </div>
                     </div>
             </div>
             <div class="col-lg-12 col-xxl-4"></div>
