--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container ">
       <nav class="navbar fixed-top navbar-expand-lg bg-body-white ">
         <div class="container-fluid">
-          <a class="logo" href="#"><img src="kepek/logo3.png" alt="logo3" width="70px"></a>
+          <a class="logo" href="#etlap"><img src="kepek/logo3.png" alt="logo3" width="70px"></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -36,7 +36,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Étlap</a>
+                <a class="nav-link active" aria-current="page" href="#etlap">Étlap</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#itallap">Itallap</a>
